--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1, h2, h3 {
+  font-family: 'Prata';
+}
+
+h4, h5, label, .botao {
+  font-family: 'Montserrat', sans-serif;
+}
+
